# Chat_Messenger

./: CMakeLists.txt  README.md  main.cpp
business_logic/: CMakeLists.txt
business_logic/lib/: chat_manager.h  message.h  user.h  user_manager.h
business_logic/lib/chat_room/: abstract_chat.h  abstract_group_chat.h  group_close_chat.h  group_open_chat.h  personal_chat.h
business_logic/lib/time_provider/: abstract_time_provider.h  mock_time_provider.h  time_provider.h
business_logic/src/: chat_manager.cpp  message.cpp  user.cpp  user_manager.cpp
business_logic/src/chat_room/: abstract_chat.cpp  abstract_group_chat.cpp  group_close_chat.cpp  group_open_chat.cpp  personal_chat.cpp
business_logic/src/time_provider/: abstract_time_provider.cpp  mock_time_provider.cpp  time_provider.cpp
tests/: CMakeLists.txt  test_business_logic.cpp  web_tests.cpp
web/: CMakeLists.txt
web/lib/: commands.h  server.h  session.h
web/src/: server.cpp  session.cpp
